tests/tooling/fixtures/native/recovery/negative/negative_loop_control_parser_continue_missing_semicolon.objc3
// Negative fixture: malformed continue statement missing ';'.
// Expected diagnostic code(s): O3P104.
module NegativeLoopControlParserContinueMissingSemicolon;

fn main() -> i32 {
  while (1) {
    continue
  }
  return 0;
}
